# VisionLink

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
arduino/visionlink_receiver/: visionlink_receiver.ino
scripts/: download_models.sh
src/visionlink/: __init__.py  cli.py  config.py  controller.py  exceptions.py  logging_config.py  mediapipe_utils.py  models.py  paths.py
src/visionlink/acquisition/: __init__.py  batch.py  image_loader.py  webcam.py
src/visionlink/detection/: __init__.py  face_detector.py
src/visionlink/gestures/: __init__.py  gesture_engine.py  landmark_indices.py
src/visionlink/hardware/: __init__.py  bridge.py  gesture_commands.py  serial_sender.py
src/visionlink/landmarks/: __init__.py  landmark_detector.py
src/visionlink/output/: __init__.py  formatter.py  report.py  visualization.py
