[project]
name = "visionlink"
version = "0.1.0"
description = "Modular computer vision framework for facial gesture recognition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reza Namvaran" }]

dependencies = [
    "mediapipe>=0.10.35",
    "numpy>=2.0",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.9"]

[project.scripts]
visionlink = "visionlink.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
